[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFlowImageFiltering"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "imutils>=0.5.4",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "opencv-python>=4.10.0",
    "pytesseract>=0.3.13",
    "opencv-contrib-python>=4.10.0",
    "PyFlow @ git+https://github.com/wonderworks-software/PyFlow.git@master"
]

[tool.setuptools.packages]
find = {where = ["Packages"]}